--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Mukta:wght@500&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Mukta:wght@200;500&display=swap');
 body{
     box-sizing: border-box;
     margin: 0;
@@ -71,4 +70,124 @@ body{
     font-size: 15px;
     font-weight: bold;
     cursor: pointer;
+}
+
+.midSection{
+    display: flex;
+}
+
+.title{
+    display: flex;
+    justify-content: center;
+    font-size: 36px;
+    font-weight: bold;
+}
+
+.midSection{
+    display: flex;
+    justify-content: center;
+    margin-bottom: 85px;
+}
+.midSection .container{
+    max-width: 50%;
+    width: 100%;
+    display: flex;
+}
+.boxes{
+    display: flex;
+    gap: 25px;
+}
+.box{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+   
+}
+.boximg{
+    border-radius: 10px;
+    border: 5px solid #3882F6;
+    width: 200px;
+    height: 190px;
+}
+
+.quoteSection{
+    background-color: #E5E7EB;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 85px;
+}
+.quoteSection .container{
+    display: flex;
+    flex-direction: column;
+    max-width: 50%;
+    width: 100%;
+    font-size: 36px;
+    font-style: italic;
+    font-weight: 200;
+    margin: 100px 0 100px 0;
+}
+.quoteSection .container h4{
+    font-weight: 200;
+    margin: 0;
+}
+.quoteSection .container a{
+    align-self: end;
+    font-weight: bold;
+    font-style: normal;
+}
+
+.ctaSection{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 85px;
+}
+.ctaSection .container{
+    max-width: 65%;
+    width: 100%;
+    background-color: #3882f6;
+    border-radius: 10px;
+    color: white;
+    display: flex;
+    justify-content: space-around;
+    padding: 50px 0 50px 0;
+}
+.ctaContent h4{
+    font-size: 30px;
+    margin: 0;
+}
+.ctaContent a{
+    font-size: 20px;
+}
+.ctaButton{
+    display: flex;
+    align-items: center;
+}
+.ctaButton button{
+    background-color: #3882F6;
+    border: 2px solid white;
+    border-radius: 5px;
+    color: white;
+    font-weight: bold;
+    font-size: 20px;
+    padding: 0 30px 0 30px;
+    text-align: center;
+    cursor: pointer;
+    height: 40px;
+}
+
+.footer{
+    background-color: #1F2937;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: white;
+    margin-top: auto;
+}
+.footer h2{
+    font-weight: 200;
+    font-size: 20px;
+
 }
